<resources>
    //launch
    <string name="app_name">2Coach</string>
    <string name="launch_activity_registration">регистрация</string>
    <string name="launch_activity_skip">пропустить</string>

    //registration
    <string name="sms_fragment_button_text">Получить код в SMS</string>
    <string name="sms_fragment_phone_hint">Номер телефона</string>
    <string name="sms_code_fragment_time_text">Получить новый код можно через %s</string>

    //MainActivity
    <string name="main_text">Главная</string>
    <string name="calendar_text">Календарь</string>
    <string name="search_text">Поиск</string>
    <string name="profile_text">Профиль</string>

    //profile
    <string name="profile_fragment_user_name_text">Имя пользователя</string>
    <string name="profile_fragment_my_data_text">Мои данные</string>
    <string name="profile_fragment_payment_method_text">Способы оплаты</string>
    <string name="profile_fragment_my_bonus_text">Мои бонусы</string>
    <string name="profile_fragment_favourites">Избаранные</string>
    <string name="profile_fragment_information_text">Информация</string>
    <string name="profile_fragment_support_service_text">Служба поддержки</string>
    <string name="profile_fragment_about_us_text">О нас</string>
    <string name="profile_fragment_leave_account">Выйти из аккаунта</string>

    //profileEdit
    <string name="profile_edit_fragment_change_photo_text">Сменить фото</string>
    <string name="profile_edit_fragment_name_text">Имя</string>
    <string name="profile_edit_fragment_mobile_tel_text">Мобильный телефон</string>
    <string name="profile_edit_fragment_email_text">E-mail</string>
    <string name="profile_edit_fragment_birth_date_text">Дата рождения</string>
    <string name="profile_edit_fragment_sex_text">Пол:</string>
    <string name="profile_edit_fragment_female_text">Женский</string>
    <string name="profile_edit_fragment_male_text">Мужской</string>
    <string name="profile_edit_fragment_save_data_text">Сохранить данные</string>
    <string name="profile_edit_fragment_profile_image_content">profile image content</string>

    //profile bonus
    <string name="profile_bonus_fragment_bonus_title">Накопительная система бонусов</string>
    <string name="profile_bonus_fragment_bonus_text">С нашей системой вы можете накапливать бонусы за каждую 5-ую тренировку, а потом их поменять на тренировку.</string>

    // main pages
    <string name="dialog_main_enroll_train_success_description">Тренировка успешно добавлено в ваше расписание, чтобы посмотреть расписание, нажмите на кнопку ниже</string>

    <string name="fragment_main_fitness_trainer_location">Локация: Ул.  Назарбаева 223</string>
    <string name="fragment_main_fitness_trainer_phone">Номер телефона:  8 777 707 77 77</string>


</resources>