<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.presentation.view.ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_edit_image_view_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            android:elevation="0dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_edit_image_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_profile_photo" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/user_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="42dp"
            android:fontFamily="@font/helvetica_medium"
            android:text="@string/profile_fragment_user_name_text"
            android:textColor="@color/gun_powder_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_edit_image_view_container"
            app:layout_constraintTop_toTopOf="@id/profile_edit_image_view_container" />

        <TextView
            android:id="@+id/my_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/helvetica_medium"
            android:text="@string/profile_fragment_my_data_text"
            android:textColor="@color/gun_powder_color"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/user_name_text_view"
            app:layout_constraintTop_toBottomOf="@id/user_name_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/payment_method_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="35dp"
        android:drawableStart="@drawable/ic_payment_type"
        android:drawablePadding="12dp"
        android:fontFamily="@font/helvetica_light"
        android:text="@string/profile_fragment_payment_method_text"
        android:textColor="@color/gun_powder_color"
        android:textSize="18sp"
        app:drawableTint="@color/gun_powder_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray_77_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_bonus_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_bonus"
        android:drawablePadding="12dp"
        android:fontFamily="@font/helvetica_light"
        android:text="@string/profile_fragment_my_bonus_text"
        android:textColor="@color/gun_powder_color"
        android:textSize="18sp"
        app:drawableTint="@color/gun_powder_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray_77_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/history_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_training_history"
        android:drawablePadding="12dp"
        android:fontFamily="@font/helvetica_light"
        android:text="@string/profile_fragment_train_history"
        android:textColor="@color/gun_powder_color"
        android:textSize="18sp"
        app:drawableTint="@color/gun_powder_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray_77_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/information_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/helvetica_regular"
        android:text="@string/profile_fragment_information_text"
        android:textColor="@color/gun_powder_color"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/support_service_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_support_service"
        android:drawablePadding="12dp"
        android:fontFamily="@font/helvetica_light"
        android:text="@string/profile_fragment_support_service_text"
        android:textColor="@color/gun_powder_color"
        android:textSize="18sp"
        app:drawableTint="@color/gun_powder_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray_77_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_us_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_about_us"
        android:drawablePadding="12dp"
        android:fontFamily="@font/helvetica_light"
        android:text="@string/profile_fragment_about_us_text"
        android:textColor="@color/gun_powder_color"
        android:textSize="18sp"
        app:drawableTint="@color/gun_powder_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray_77_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/leave_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_log_out"
        android:drawablePadding="12dp"
        android:fontFamily="@font/helvetica_light"
        android:text="@string/profile_fragment_leave_account"
        android:textColor="@color/gun_powder_color"
        android:textSize="18sp"
        app:drawableTint="@color/gun_powder_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray_77_color" />

</LinearLayout>